fixes #3 : adds icons to dark mode switch

--- a/src/components/theme-switch/index.scss
+++ b/src/components/theme-switch/index.scss
@@ -6,5 +6,14 @@
     color: #222;
     font-size: 14px;
     font-weight: 900;
+    padding-top: 1px;
+  }
+
+  .uncheckedIcon {
+    opacity: 0.4;
+  }
+
+  .checkedIcon {
+    opacity: 0.8;
   }
 }
